Add GET /tasks endpoint for current user